# Virus.Lolita69

./: .gitignore  README.md
antivirus/: Makefile  Makefile.am  Makefile.in  README.md  config.status  configure  configure.ac  test_av.sh
antivirus/rsrc/: Makefile  signatures.db
antivirus/src/: Makefile  Makefile.am  Makefile.in  core.h  database.h
antivirus/src/antivirus/: Makefile  Makefile.am  Makefile.in  commandrunner.cpp  commandrunner.h  core.cpp  core.h  database.cpp  database.h  debug.h  descriptortracer.cpp  descriptortracer.h  dynamicdetection.cpp  dynamicdetection.h  fileCommon.h  fileLoader.cpp  fileLoader.h  filedata.cpp  filedata.h  filereader.cpp  filereader.h  main.cpp  sandbox.cpp  sandbox.h  syscall.cpp  tracer.cpp  tracer.h  unpacker.cpp  unpacker.h  upxScrambler.cpp  upxScrambler.h  upxUnscrambler.cpp  upxUnscrambler.h  zipreader.cpp  zipreader.h
antivirus/src/database_injector/: Makefile  Makefile.am  Makefile.in  main.cpp
antivirus/src/database_packer/: Makefile  Makefile.am  Makefile.in  main.cpp
antivirus/src/libc_hijack/: Makefile.am  Makefile.in  fopen.c  fprintf.c  fputs.c  fwrite.c  global.c  system.c
antivirus/src/upx/: upxParser.cpp  upxParser.h  upxParser.h~
preloadHook/: compile_lines  compile_lines~
preloadHook/src/: Makefile  Makefile~  database  database~  fileCounter.c  fileCounter.h  test  test.c  test2.txt  virusChecker.c  virusChecker.c~
virus/: Changelog.md  DecodeBF.py  EncodeBF.py  README.md  bf_layer.py  builder.py  builder_generated.py  byteplay.py  decodePyc.py  disass.py  hardlink_test.sh  hardlink_write.py  injector.py  inv2_layer.py  invAll.py  invAll_layer.py  leurre.py  lolita.py  meta_builder.py  no_op_layer.py  obfuscation.py  payload.py  payload_utile.py  template.py  template_light.py  test.sh  tests.py  xor_layer.py  xor_light_layer.py
virus/targets/: hello2.py
virus/targets/targets/: hello_bis.py
virus/tmp/: hosts
