bin_PROGRAMS=$(top_builddir)/bin/antivirus

__top_builddir__bin_antivirus_SOURCES= \
	main.cpp debug.h \
	core.cpp core.h \
	database.cpp database.h \
	filereader.cpp filereader.h \
	filedata.cpp filedata.h \
	zipreader.cpp zipreader.h \
	sandbox.cpp sandbox.h \
	syscall.cpp tracer.cpp tracer.h \
	commandrunner.cpp commandrunner.h \
	descriptortracer.cpp descriptortracer.h \
	dynamicdetection.cpp dynamicdetection.h
